@@ -505,23 +505,25 @@ public class SubscriptionRepositoryTest extends AbstractManagementRepositoryTest
     }
 
     @Test
-    public void shouldSearchByApisAsBackwardCompatibility() throws TechnicalException {
-        // Criteria with only apis set (no referenceIds/referenceType) is treated as referenceType=API for backward compatibility
-        List<Subscription> subscriptions = this.subscriptionRepository.search(SubscriptionCriteria.builder().apis(List.of("api1")).build());
+    public void shouldSearchByReferenceIdsAndType() throws TechnicalException {
+        // Criteria with referenceIds/referenceType for API subscriptions
+        List<Subscription> subscriptions = this.subscriptionRepository.search(
+            SubscriptionCriteria.builder().referenceIds(List.of("api1")).referenceType(SubscriptionReferenceType.API).build()
+        );
 
         assertNotNull(subscriptions);
         assertFalse(subscriptions.isEmpty());
         assertEquals("Subscriptions size", 1, subscriptions.size());
-        assertEquals("Subscription id", "sub1", subscriptions.getFirst().getId());
-        assertEquals("API (reference)", "api1", subscriptions.getFirst().getReferenceId());
-        assertEquals("Reference type", SubscriptionReferenceType.API, subscriptions.getFirst().getReferenceType());
+        assertEquals("Subscription id", "sub1", subscriptions.get(0).getId());
+        assertEquals("API (reference)", "api1", subscriptions.get(0).getReferenceId());
+        assertEquals("Reference type", SubscriptionReferenceType.API, subscriptions.get(0).getReferenceType());
     }
 
     @Test
     public void shouldSearchByReferenceIdsAndReferenceType() throws TechnicalException {
         List<Subscription> subscriptions = this.subscriptionRepository.search(
             SubscriptionCriteria.builder()
-                .referenceIds(List.of("api-product-1"))
+                .referenceIds(List.of("c45b8e66-4d2a-47ad-9b8e-664d2a97ad88"))
                 .referenceType(SubscriptionReferenceType.API_PRODUCT)
                 .build()
         );
@@ -535,7 +537,7 @@ public class SubscriptionRepositoryTest extends AbstractManagementRepositoryTest
         assertTrue("Should contain sub-api-product-2", subscriptionIds.contains("sub-api-product-2"));
 
         subscriptions.forEach(subscription -> {
-            assertEquals("API Product ID", "api-product-1", subscription.getReferenceId());
+            assertEquals("API Product ID", "c45b8e66-4d2a-47ad-9b8e-664d2a97ad88", subscription.getReferenceId());
             assertEquals("Reference Type", SubscriptionReferenceType.API_PRODUCT, subscription.getReferenceType());
         });
     }
@@ -543,7 +545,7 @@ public class SubscriptionRepositoryTest extends AbstractManagementRepositoryTest
     @Test
     public void shouldFindByReferenceIdAndReferenceType() throws TechnicalException {
         Set<Subscription> subscriptions = subscriptionRepository.findByReferenceIdAndReferenceType(
-            "api-product-1",
+            "c45b8e66-4d2a-47ad-9b8e-664d2a97ad88",
             SubscriptionReferenceType.API_PRODUCT
         );
 
@@ -553,7 +555,7 @@ public class SubscriptionRepositoryTest extends AbstractManagementRepositoryTest
 
         // Verify all subscriptions belong to the api-product
         subscriptions.forEach(subscription -> {
-            assertEquals("API Product ID", "api-product-1", subscription.getReferenceId());
+            assertEquals("API Product ID", "c45b8e66-4d2a-47ad-9b8e-664d2a97ad88", subscription.getReferenceId());
             assertEquals("Reference Type", SubscriptionReferenceType.API_PRODUCT, subscription.getReferenceType());
         });
     }
@@ -573,14 +575,14 @@ public class SubscriptionRepositoryTest extends AbstractManagementRepositoryTest
     public void shouldFindByIdAndReferenceIdAndReferenceType() throws TechnicalException {
         Optional<Subscription> subscription = subscriptionRepository.findByIdAndReferenceIdAndReferenceType(
             "sub-api-product-1",
-            "api-product-1",
+            "c45b8e66-4d2a-47ad-9b8e-664d2a97ad88",
             SubscriptionReferenceType.API_PRODUCT
         );
 
         assertNotNull(subscription);
         assertTrue(subscription.isPresent());
         assertEquals("Subscription id", "sub-api-product-1", subscription.get().getId());
-        assertEquals("API Product ID", "api-product-1", subscription.get().getReferenceId());
+        assertEquals("API Product ID", "c45b8e66-4d2a-47ad-9b8e-664d2a97ad88", subscription.get().getReferenceId());
         assertEquals("Reference Type", SubscriptionReferenceType.API_PRODUCT, subscription.get().getReferenceType());
     }
 
@@ -600,7 +602,7 @@ public class SubscriptionRepositoryTest extends AbstractManagementRepositoryTest
     public void shouldNotFindByIdAndReferenceIdAndReferenceTypeWhenSubscriptionDoesNotExist() throws TechnicalException {
         Optional<Subscription> subscription = subscriptionRepository.findByIdAndReferenceIdAndReferenceType(
             "non-existent",
-            "api-product-1",
+            "c45b8e66-4d2a-47ad-9b8e-664d2a97ad88",
             SubscriptionReferenceType.API_PRODUCT
         );
 
